package Programa;

public class Empleado {



}
