@startuml
'https://plantuml.com/sequence-diagram

left to right direction
skin rose
hide methods

'ENTIDADES

entity Empleados{
    Nombre del Usuario
    Contraseña
    Comiciones
}

entity Videojuegos{
    Código
    Nombre
    Precio
    Género
    Clasificación por Edades
    Desarrolladora
    Plataforma
}

entity Cliente{
    Cuenta
    Rut
    Nombre Completo
    Email
}

'NOTAS
note "El cliente puede tener o no una cuenta, con\nla cuál recibe descuentos sobre los juegos" as Nota1
note "El empleado recibe una comision por cada venta realizada (2% del total de la venta)" as Nota2

'RELACIONES
Empleados "1...*" --> "*" Videojuegos : Vende
Cliente "1..*" --> "*" Videojuegos : Compra

Nota1 -> Cliente
Nota2 -> Empleados

@enduml